<resources>
    <string name="app_name">T-Rent</string>
    <string name="WelcomeMessage">Welcome to T-Rent!</string>
    <string name="SignInMessage">Sign in to continue!</string>
    <string name="Start_Button">Start</string>
    <string name="UsernameString">Username</string>
    <string name="PasswordString">Password</string>
    <string name="description">house picture</string>
    <string name="houseDescribe">House</string>
    <string name="NoAccount">Don\'t have an account?</string>
    <string name="ownerRegister">SignUp as Owner</string>
    <string name="renterRegister">SignUp as Renter</string>
    <string name="descriptionForOwnerPicture">PictureForOwnerRegister</string>
    <string name="MessageForOwnerRegister">Create your own ads and offer to others a place to stay!</string>
    <string name="first_name_fill">First Name</string>
    <string name="last_name_fill">Last Name</string>
    <string name="email_fill">Email Address</string>
    <string name="phone_fill">Phone No</string>
    <string name="date_fill">Date of birth</string>
    <string name="Message_to_fill_info">Complete your registration with a username and password</string>
    <string name="ReEnterPasswordString">Re-enter Password</string>
    <string name="Email_verification">Verify e-mail to proceed</string>
    <string name="ScrollForRegister">ScrollForRegistrationScreen</string>
    <string name="title_activity_ad_info">AdInfoActivity</string>
    <string name="my_ads">MyAds</string>
    <string name="previousImageButton">Previous</string>
    <string name="nextImageButton">Next</string>
    <string name="addImageButton">Add Image</string>
    <string name="fill_house_s_details_for_ad">Fill house\'s details for ad</string>
    <string name="street">Street</string>
    <string name="postcode">Postcode</string>
    <string name="region">Region</string>
    <string name="rent">Rent</string>
    <string name="choose_hours_for_appointments">Choose hours for appointments</string>
    <string name="choose_days_for_appointments">Choose days for appointments</string>
    <string name="chosen_hours_tap_to_remove">Chosen hours(tap to remove)</string>
    <string name="chosen_days_tap_to_remove">Chosen days(tap to remove)</string>
    <string name="create_new_ad">Create new Ad</string>
    <string name="comment">Comments(extra info, problems, extra rules, etc.)</string>
    <string name="action_settings">Settings</string>
</resources>